# graphics-toolbox

./: Cargo.toml  build.sh  index.html  serve.py  shader.wgsl  shell.nix
.github/workflows/: webpack.yml
src/: lib.rs  main.rs  platform.rs  winit_proxy.rs
src/platform/: native.rs  wasm.rs
webapp/: README.md  package-lock.json  package.json  webpack.config.js  webpack.config.mjs
webapp/src/: index.js  index.mjs
webapp/static/: index.html
